feat: Add OrderInfo component
This component will be used to display information about an Order and
maybe to do something with it.

--- a/packages/ticket_sidebar/src/style.css
+++ b/packages/ticket_sidebar/src/style.css
@@ -16,13 +16,22 @@
   border-radius: 100%;
   width: 16px;
   height: 16px;
+}
 
-  &__confirmed {
-    display: inline-block;
-    border-radius: 100%;
-    width: 14px;
-    height: 14px;
-    background-color: gray;
-    margin-right: 8px;
-  }
+.indicator__confirmed {
+  display: inline-block;
+  border-radius: 100%;
+  width: 12px;
+  height: 12px;
+  background-color: var(--zd-color-grey-800);
+  margin-right: 8px;
+}
+
+.title {
+  color: var(--zd-color-grey-800);
+  font-weight: bold;
+}
+
+.state {
+  color: var(--zd-color-grey-600);
 }
